docs: add RSS comparison for compact object headers + AOT cache
Document the measured resident-memory reduction from the JVM runtime features
enabled on the axelix-applied branch (compact object headers + AOT cache) versus a
plain JVM: ~65-115 MB (~10-22%) lower RSS under an identical moderate load, with the
reduction attributed mostly to the AOT cache (off-heap) and a smaller share to
compact object headers (object heap).